--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .head-sub {
+    @apply border-gray-400 border-l-2 pl-1 text-sm leading-[18px] tracking-tight text-gray-400;
+  }
+}
